# skeleton-rs

./: Cargo.toml  DIOXUS.md  README.md  YEW.md
examples/dioxus/: Cargo.toml  Dioxus.toml  README.md
examples/dioxus/src/: main.rs
examples/yew/: Cargo.toml  README.md  index.html
examples/yew/src/pages/: landing.rs
src/: common.rs  dioxus.rs  lib.rs  yew.rs
